yay for /invite

--- a/womenwhogo.org/invite.html
+++ b/womenwhogo.org/invite.html
@@ -35,7 +35,7 @@
     <br>
 <div class="container">
 <div class="col-sm-8 col-sm-offset-2">
-  <form method="POST" action="https://womenwhogo-invite.appspot.com/invite">
+  <form method="POST" action="/invite">
     <div class="form-group">
     	<label for="email">Email</label>
     	<input type="email" class="form-control" id="email" placeholder="Email" name="email">
