--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -223,6 +223,12 @@
               <img src="./assets/images/twitter.png">
             </a>
           </p>
+          <p class="col-xs-3 text-center link">
+            <a href="https://www.facebook.com/WomenWhoGoIL" target="_blank">
+              <img src="./assets/images/facebook.gif">
+            </a>
+          </p>
+          
         </div>
       </div>
        <br>
@@ -465,6 +471,23 @@
           </p>
         </div>
       </div>
+            <div class="row chapter">
+        <div class="col-xs-5">
+          <p class="lead">Minneapolis:</p>
+        </div>
+        <div class="col-xs-7">
+          <p class="col-xs-3 text-center link">
+            <a href="https://www.meetup.com/Women-Who-Go-Minneapolis/" target="_blank">
+              <img src="./assets/images/meetup.png">
+            </a>
+          </p>
+          <p class="col-xs-3 text-center link">
+            <a href="https://twitter.com/womenwhogompls" target="_blank">
+              <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+        </div>
+      </div>
       <div class="row chapter">
         <div class="col-xs-5">
           <p class="lead">New York City:</p>
@@ -534,6 +557,18 @@
           <p class="col-xs-3 text-center link">
             <a href="https://twitter.com/womenwhogo_sea" target="_blank">
               <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+        </div>
+      </div>
+      <div class="row chapter">
+        <div class="col-xs-5">
+          <p class="lead">South Bay:</p>
+        </div>
+        <div class="col-xs-7">
+          <p class="col-xs-3 text-center link">
+            <a href="http://www.meetup.com/Women-Who-Go-South-Bay" target="_blank">
+              <img src="./assets/images/meetup.png">
             </a>
           </p>
         </div>
