--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -121,6 +121,11 @@
               <img src="./assets/images/facebook.gif">
             </a>
           </p>
+          <p class="col-xs-3 text-center link">
+            <a href="mailto:poa@womenwhogo.org" target="_top">
+              <img src="./assets/images/mail.png">
+            </a>
+          </p>
         </div>
       </div>
       <br>
@@ -147,6 +152,11 @@
           <p class="col-xs-3 text-center link">
              <a href="https://wwgobr.github.io/rj/" target="_blank">
                <img src="./assets/images/website.png">
+             </a>
+           </p>
+           <p class="col-xs-3 text-center link">
+             <a href="mailto:riodejaneiro@womenwhogo.org" target="_top">
+               <img src="./assets/images/mail.png">
              </a>
            </p>
         </div>
@@ -180,6 +190,11 @@
           <p class="col-xs-3 text-center link">
             <a href="https://wwgberlin.herokuapp.com/" target="_blank">
               <img src="./assets/images/slack-sign-up.png">
+            </a>
+          </p>
+          <p class="col-xs-3 text-center link">
+            <a href="mailto:berlin@womenwhogo.org" target="_top">
+              <img src="./assets/images/mail.png">
             </a>
           </p>
         </div>
@@ -228,7 +243,11 @@
               <img src="./assets/images/facebook.gif">
             </a>
           </p>
-          
+          <p class="col-xs-3 text-center link">
+            <a href="mailto:israel@womenwhogo.org" target="_top">
+              <img src="./assets/images/mail.png">
+            </a>
+          </p>
         </div>
       </div>
        <br>
@@ -252,6 +271,11 @@
               <img src="./assets/images/twitter.png">
             </a>
           </p>
+          <p class="col-xs-3 text-center link">
+            <a href="mailto:paris@womenwhogo.org" target="_top">
+              <img src="./assets/images/mail.png">
+            </a>
+          </p>
         </div>
       </div>
        <br>
@@ -273,6 +297,11 @@
           <p class="col-xs-3 text-center link">
             <a href="https://twitter.com/wwg_tokyo" target="_blank">
               <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+          <p class="col-xs-3 text-center link">
+            <a href="mailto:tokyo@womenwhogo.org" target="_top">
+              <img src="./assets/images/mail.png">
             </a>
           </p>
         </div>
@@ -344,6 +373,11 @@
               <img src="./assets/images/twitter.png">
             </a>
           </p>
+          <p class="col-xs-3 text-center link">
+            <a href="mailto:zurich@womenwhogo.org" target="_top">
+              <img src="./assets/images/mail.png">
+            </a>
+          </p>
         </div>
       </div>
       <br>
@@ -390,6 +424,11 @@
               <img src="./assets/images/twitter.png">
             </a>
           </p>
+          <p class="col-xs-3 text-center link">
+            <a href="mailto:atlanta@womenwhogo.org" target="_top">
+              <img src="./assets/images/mail.png">
+            </a>
+          </p>
         </div>
       </div>
       <div class="row chapter">
@@ -422,6 +461,11 @@
           <p class="col-xs-3 text-center link">
             <a href="https://twitter.com/WomenWhoGo_Bos" target="_blank">
               <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+          <p class="col-xs-3 text-center link">
+            <a href="mailto:boston@womenwhogo.org" target="_top">
+              <img src="./assets/images/mail.png">
             </a>
           </p>
         </div>
@@ -473,6 +517,11 @@
           <p class="col-xs-3 text-center link">
             <a href="https://www.twitter.com/WomenWhoGo_LA" target="_blank">
               <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+          <p class="col-xs-3 text-center link">
+            <a href="mailto:la@womenwhogo.org" target="_top">
+              <img src="./assets/images/mail.png">
             </a>
           </p>
         </div>
@@ -586,12 +635,22 @@
       </div>
       <div class="row chapter">
         <div class="col-xs-5">
-          <p class="lead">South Bay:</p>
+          <p class="lead">SF South Bay:</p>
         </div>
         <div class="col-xs-7">
           <p class="col-xs-3 text-center link">
             <a href="http://www.meetup.com/Women-Who-Go-South-Bay" target="_blank">
               <img src="./assets/images/meetup.png">
+            </a>
+          </p>
+          <p class="col-xs-3 text-center link">
+            <a href="https://twitter.com/wwgsouthbay" target="_blank">
+              <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+          <p class="col-xs-3 text-center link">
+            <a href="mailto:bayarea@womenwhogo.org " target="_top">
+              <img src="./assets/images/mail.png">
             </a>
           </p>
         </div>
