new chapter wwgfloripa

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -83,24 +83,27 @@
           <p class="lead text-muted text-capital">Brazil</p>
         </div>
       </div>
-       <div class="row chapter">
+
+      <br>
+      <div class="row chapter">
         <div class="col-xs-5">
-          <p class="lead">Salvador:</p>
+          <p class="lead">Florianópolis:</p>
         </div>
         <div class="col-xs-7">
           <p class="col-xs-2 text-center link">
-            <a href="https://www.meetup.com/Women-Who-Go-Brasil/" target="_blank">
+            <a href="https://www.meetup.com/Women-Who-Go-Floripa/" target="_blank">
               <img src="./assets/images/meetup.png">
             </a>
           </p>
           <p class="col-xs-2 text-center link">
-            <a href="https://twitter.com/WWGBrasil" target="_blank">
+            <a href="https://twitter.com/WWGFloripa" target="_blank">
               <img src="./assets/images/twitter.png">
             </a>
           </p>
         </div>
       </div>
       <br>
+
       <div class="row chapter">
         <div class="col-xs-5">
           <p class="lead">Porto Alegre:</p>
@@ -128,7 +131,9 @@
           </p>
         </div>
       </div>
+
       <br>
+
       <div class="row chapter">
         <div class="col-xs-5">
           <p class="lead">Rio de Janeiro:</p>
@@ -161,6 +166,27 @@
            </p>
         </div>
       </div>
+
+      <br>
+
+      <div class="row chapter">
+        <div class="col-xs-5">
+          <p class="lead">Salvador:</p>
+        </div>
+        <div class="col-xs-7">
+          <p class="col-xs-2 text-center link">
+            <a href="https://www.meetup.com/Women-Who-Go-Brasil/" target="_blank">
+              <img src="./assets/images/meetup.png">
+            </a>
+          </p>
+          <p class="col-xs-2 text-center link">
+            <a href="https://twitter.com/WWGBrasil" target="_blank">
+              <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+        </div>
+      </div>
+
       <br>
             <div class="row chapter-region">
         <div class="col-xs-12">
