--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -27,9 +27,9 @@
   </head>
 
   <body>
-<!--   <div class="alert alert-warning lead">
-  Please consider <a href="http://igg.me/at/Ei-kyYFu77k">donating</a> to send women to Gophercon!
-  </div> -->
+  <div class="alert alert-warning lead">
+  Please consider <a href="https://www.youcaring.com/womenwhogoviabridgefoundryinc-1086264">donating</a> to send women to Gophercon 2018!
+  </div> 
     <div class="container header">
       <div class="row"><p class="text-center col-xs-6 col-xs-offset-3"><img class="main-img" src="assets/images/wwglogo.png"></p></div>
       <h1 class="text-center">Women Who Go</h1>
