--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -28,7 +28,7 @@
 
   <body>
   <div class="alert alert-warning lead">
-  Please consider <a href="https://www.youcaring.com/womenwhogoviabridgefoundryinc-1086264">donating</a> to send women to Gophercon 2018!
+  Please consider <a href="https://www.youcaring.com/womenwhogoviabridgefoundryinc-1086264">donating</a> to send women to Gophercon Denver 2018!
   </div> 
     <div class="container header">
       <div class="row"><p class="text-center col-xs-6 col-xs-offset-3"><img class="main-img" src="assets/images/wwglogo.png"></p></div>
