Add paypal donations

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -74,6 +74,18 @@
           </p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-xs-5">
+          <p class="lead">Donations:</p>
+        </div>
+        <div class="col-xs-7">
+          <p class="col-xs-3 text-center link">
+            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=N25AMKB9QGZ6J" target="_blank">
+              <img src="./assets/paypal.png">
+            </a>
+          </p>
+        </div>
+      </div>
     </div>
     <hr>
     <div class="container chapters">
