Add Wellington chapter

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -29,7 +29,7 @@
   <body>
   <div class="alert alert-warning lead">
   Please consider <a href="https://www.youcaring.com/womenwhogoviabridgefoundryinc-1086264">donating</a> to send women to Gophercon Denver 2018!
-  </div> 
+  </div>
     <div class="container header">
       <div class="row"><p class="text-center col-xs-6 col-xs-offset-3"><img class="main-img" src="assets/images/wwglogo.png"></p></div>
       <h1 class="text-center">Women Who Go</h1>
@@ -363,6 +363,29 @@
           <p class="col-xs-2 text-center link">
             <a href="https://www.facebook.com/Womenwhogomx-196727590658357" target="_blank">
               <img src="./assets/images/facebook.gif">
+            </a>
+          </p>
+        </div>
+      </div>
+      <br>
+      <div class="row chapter-region">
+        <div class="col-xs-12">
+          <p class="lead text-muted text-capital">New Zealand</p>
+        </div>
+      </div>
+      <div class="row chapter">
+        <div class="col-xs-5">
+          <p class="lead">Wellington:</p>
+        </div>
+        <div class="col-xs-7">
+          <p class="col-xs-2 text-center link">
+            <a href="https://www.meetup.com/Women-Who-Go-Wellington/" target="_blank">
+              <img src="./assets/images/meetup.png">
+            </a>
+          </p>
+          <p class="col-xs-2 text-center link">
+            <a href="https://twitter.com/wwgwellington" target="_blank">
+              <img src="./assets/images/twitter.png">
             </a>
           </p>
         </div>
