--- a/womenwhogo.org/donations.html
+++ b/womenwhogo.org/donations.html
@@ -41,8 +41,8 @@
     <div class="container links">
       <h2>Direct Donations</h2>
         <ul>
-          <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=N25AMKB9QGZ6J">General Fund</a></li>
-          <li><a href="https://www.youcaring.com/womenwhogoviabridgefoundryinc-1086264">GopherCon Scholarhips</a></li>
+          <li>Our <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=N25AMKB9QGZ6J">General Fund</a> is for diversity scholarships for the <a href="https://gophercon.com">GopherCon US</a> and <a href="https://gophercon.is">GopherCon EU</a> conferences, in addition to our other activities.</li>
+          <li><a href="https://www.youcaring.com/womenwhogoviabridgefoundryinc-1086264">GopherCon US (Denver) 2018 Scholarhips</a></li>
         </ul>
       <h2>Women Who Go Store</h2>
       <p>
