--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -462,11 +462,11 @@
               <img src="./assets/images/twitter.png">
             </a>
           </p>
-          <p class="col-xs-2 text-center link">
+          <!--<p class="col-xs-2 text-center link">
              <a href="http://womenwhogo.co.uk" target="_blank">
                <img src="./assets/images/website.png">
              </a>
-           </p>
+           </p>-->
         </div>
       </div>
       <br>
