Add scholarship page

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -28,7 +28,8 @@
 
   <body>
   <div class="alert alert-warning lead">
-  Please consider <a href="donations.html">donating</a> to send women to Gophercon Denver 2018!
+  <a href="donations.html">Donate</a> to send our members to GopherCon or
+  <a href="scholarships.html">Apply</a> for a scholarship!
   </div>
     <div class="container header">
       <div class="row"><p class="text-center col-xs-6 col-xs-offset-3"><img class="main-img" src="assets/images/wwglogo.png"></p></div>
