Changed to woman or nb

--- a/womenwhogo.org/scholarships.html
+++ b/womenwhogo.org/scholarships.html
@@ -42,9 +42,9 @@
       <h2>Eligibility</h2>
         <p>You must meet at least one of the following requirements:</p>
         <ul>
-          <li>Identify as a woman</li>
+          <li>Identify as a woman or non-binary</li>
           <li>Identify as a person of color</li>
-          <li>Identify as LGBTQ+ or non-binary</li>
+          <li>Identify as LGBTQ+</li>
           <li>Identify as disabled</li>
         </ul>
       <h2>What's Covered</h2>
