--- a/womenwhogo.org/scholarships.html
+++ b/womenwhogo.org/scholarships.html
@@ -44,7 +44,7 @@
         <ul>
           <li>Identify as a woman or non-binary</li>
           <li>Identify as a person of color</li>
-          <li>Identify as LGBTQ+</li>
+          <li>Identify as LGBTQA+</li>
           <li>Identify as disabled</li>
         </ul>
       <h2>What's Covered</h2>
