Link to gophercon iceland form

--- a/womenwhogo.org/scholarships.html
+++ b/womenwhogo.org/scholarships.html
@@ -33,7 +33,7 @@
           <img class="main-img" src="assets/images/wwglogo.png">
         </a>
       </p></div>
-      <h1 class="text-center">GopherCon Scholarhip</h1>
+      <h1 class="text-center">GopherCon Scholarhips</h1>
     </div>
     <hr>
     <br>
@@ -60,12 +60,18 @@
       <p>If your employer can pay for any part of your expenses, we ask that you take advantage of that
         first and use the scholarship for only uncovered expenses.
       </p>
-      <p>
+
       <div style="margin-bottom: 3em;">
         <h2 style="text-align: center">
           <a href="https://docs.google.com/forms/d/1CukfD-XPLJ87pzz1qmKCuoN6mSKSpVgvu6lydCzFNn0">GopherCon US 2018 Application Form</a>
         </h2>
       </div>
+      <div style="margin-bottom: 3em;">
+        <h2 style="text-align: center">
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLScocnaSbwwLGeZLdnXuUtqlXrd4sSDX_w6Rk-ecBcnrg69ozQ/viewform">GopherCon Iceland 2018 Application Form</a>
+        </h2>
+      </div>
+
     </div>
 
     <script>
