Clarify eligibility for each scholarship

--- a/womenwhogo.org/scholarships.html
+++ b/womenwhogo.org/scholarships.html
@@ -39,15 +39,24 @@
     <br>
     <br>
     <div class="container links">
-      <h2>Eligibility</h2>
-        <p>You must meet at least one of the following requirements:</p>
+      <h2>GopherCon Iceland 2018</h2>
+      <p>The scholarship covers a free ticket to the event and travel expenses, if needed.</p>
+      <p>You must meet at least one of the following requirements:</p>
         <ul>
           <li>Identify as a woman or non-binary</li>
           <li>Identify as a person of color</li>
           <li>Identify as LGBTQIA+</li>
           <li>Identify as disabled</li>
         </ul>
-      <h2>What's Covered</h2>
+        <div style="margin-bottom: 3em;">
+          <h2 style="text-align: center">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScocnaSbwwLGeZLdnXuUtqlXrd4sSDX_w6Rk-ecBcnrg69ozQ/viewform">Apply</a>
+          </h2>
+        </div>
+
+      <h2>GopherCon US 2018</h2>
+      <p>To qualify you must identify as a woman or non-binary.</p>
+
       <p>Our goal is to send as many people as possible to GopherCon.
         Each scholarship is different, depending on what you need help with:
       </p>
@@ -63,14 +72,10 @@
 
       <div style="margin-bottom: 3em;">
         <h2 style="text-align: center">
-          <a href="https://docs.google.com/forms/d/1CukfD-XPLJ87pzz1qmKCuoN6mSKSpVgvu6lydCzFNn0">GopherCon US 2018 Application Form</a>
+          <a href="https://docs.google.com/forms/d/1CukfD-XPLJ87pzz1qmKCuoN6mSKSpVgvu6lydCzFNn0">Apply</a>
         </h2>
       </div>
-      <div style="margin-bottom: 3em;">
-        <h2 style="text-align: center">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLScocnaSbwwLGeZLdnXuUtqlXrd4sSDX_w6Rk-ecBcnrg69ozQ/viewform">GopherCon Iceland 2018 Application Form</a>
-        </h2>
-      </div>
+
 
     </div>
 
