--- a/womenwhogo.org/scholarships.html
+++ b/womenwhogo.org/scholarships.html
@@ -12,7 +12,7 @@
 
     <link rel="icon" href="favicon.ico">
 
-    <title>Scholarhips - Women Who Go</title>
+    <title>Scholarships - Women Who Go</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
