--- a/womenwhogo.org/donations.html
+++ b/womenwhogo.org/donations.html
@@ -42,7 +42,7 @@
       <h2>Direct Donations</h2>
         <ul>
           <li>Our <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=N25AMKB9QGZ6J">General Fund</a> is for diversity scholarships for the <a href="https://gophercon.com">GopherCon US</a> and <a href="https://gophercon.is">GopherCon EU</a> conferences, in addition to our other activities.</li>
-          <li><a href="https://www.youcaring.com/womenwhogoviabridgefoundryinc-1086264">GopherCon US (Denver) 2018 Scholarhips</a></li>
+          <li><a href="https://www.youcaring.com/womenwhogoviabridgefoundryinc-1086264">GopherCon US (Denver) 2018 Scholarships</a></li>
         </ul>
       <h2>Women Who Go Store</h2>
       <p>
@@ -55,8 +55,8 @@
           <a href="https://womenwhogo.threadless.com/">Shop Women Who Go</a>
         </h2>
         <p>
-          We have the most poular designs on a variety of shirt types and sizes:
-          baby onsies, women's fitted, unisex up to 3XL, phone cases, framed prints,
+          We have the most popular designs on a variety of shirt types and sizes:
+          baby onesies, women's fitted, unisex up to 3XL, phone cases, framed prints,
           journals, mugs and more!
           Below is just a small taste of the cuteness in <em>store</em> for you.
         </p>
