--- a/womenwhogo.org/scholarships.html
+++ b/womenwhogo.org/scholarships.html
@@ -33,7 +33,7 @@
           <img class="main-img" src="assets/images/wwglogo.png">
         </a>
       </p></div>
-      <h1 class="text-center">GopherCon Scholarhips</h1>
+      <h1 class="text-center">GopherCon Scholarships</h1>
     </div>
     <hr>
     <br>
