--- a/womenwhogo.org/failure.html
+++ b/womenwhogo.org/failure.html
@@ -35,7 +35,7 @@
     <br>
 <div class="container">
 <div class="col-sm-10 col-sm-offset-1">
-  <div class="lead success">Sorry, this slack is only for women and gender minorities.</div>
+  <div class="lead success">Sorry, this Slack is only for women and gender minorities.</div>
 </div>
 </div>
 <br><br>
