--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -394,6 +394,29 @@
       <br>
       <div class="row chapter-region">
         <div class="col-xs-12">
+          <p class="lead text-muted text-capital">Norway</p>
+        </div>
+      </div>
+      <div class="row chapter">
+        <div class="col-xs-5">
+          <p class="lead">Oslo:</p>
+        </div>
+        <div class="col-xs-7">
+          <p class="col-xs-2 text-center link">
+            <a href="https://www.meetup.com/Women-Who-Go-Oslo/" target="_blank">
+              <img src="./assets/images/meetup.png">
+            </a>
+          </p>
+          <p class="col-xs-2 text-center link">
+            <a href="https://twitter.com/WomenWhoGoOslo" target="_blank">
+              <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+        </div>
+      </div>
+      <br>
+      <div class="row chapter-region">
+        <div class="col-xs-12">
           <p class="lead text-muted text-capital">Russia</p>
         </div>
       </div>
