Mark iceland 2018 scholarship as closed

--- a/womenwhogo.org/scholarships.html
+++ b/womenwhogo.org/scholarships.html
@@ -50,7 +50,7 @@
         </ul>
         <div style="margin-bottom: 3em;">
           <h2 style="text-align: center">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScocnaSbwwLGeZLdnXuUtqlXrd4sSDX_w6Rk-ecBcnrg69ozQ/viewform">Apply</a>
+            Closed
           </h2>
         </div>
 
