--- a/womenwhogo.org/scholarships.html
+++ b/womenwhogo.org/scholarships.html
@@ -55,7 +55,8 @@
         </div>
 
       <h2>GopherCon US 2018</h2>
-      <p>To qualify you must identify as a woman or non-binary. Applications are due by <strong>June 22nd</strong>.</p>
+      <p>To qualify you must identify as a woman or non-binary. Applications are due by <strong>June 22nd</strong>
+        and we plan to notify recipients by July 2nd.</p>
 
       <p>Our goal is to send as many people as possible to GopherCon.
         Each scholarship is different, depending on what you need help with:
