Add email for chicago chapter

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -239,7 +239,7 @@
         </div>
       </div>
       <br>
-        
+
       <div class="row chapter-region">
         <div class="col-xs-12">
           <p class="lead text-muted text-capital">India</p>
@@ -273,7 +273,7 @@
           </div>
         </div>
         <br>
-         
+
        <div class="row chapter-region">
         <div class="col-xs-12">
           <p class="lead text-muted text-capital">Israel</p>
@@ -602,6 +602,11 @@
           <p class="col-xs-2 text-center link">
             <a href="https://twitter.com/womenwhogo_chi" target="_blank">
               <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+          <p class="col-xs-2 text-center link">
+            <a href="mailto:chicago@womenwhogo.org" target="_top">
+              <img src="./assets/images/mail.png">
             </a>
           </p>
         </div>
