Switch donate button to go to donation page
* Also cute gophers are cute

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -81,8 +81,8 @@
         </div>
         <div class="col-xs-7">
           <p class="col-xs-3 text-center link">
-            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=N25AMKB9QGZ6J" target="_blank">
-              <img src="./assets/paypal.png">
+            <a href="donations.html">
+              <img src="./assets/images/donate.png" alt="gopher holding up a heart" width="100">
             </a>
           </p>
         </div>
