2018 US scholarship is now closed

--- a/womenwhogo.org/scholarships.html
+++ b/womenwhogo.org/scholarships.html
@@ -73,7 +73,7 @@
 
       <div style="margin-bottom: 3em;">
         <h2 style="text-align: center">
-          <a href="https://docs.google.com/forms/d/1CukfD-XPLJ87pzz1qmKCuoN6mSKSpVgvu6lydCzFNn0">Apply</a>
+          Closed
         </h2>
       </div>
 
