--- a/womenwhogo.org/scholarships.html
+++ b/womenwhogo.org/scholarships.html
@@ -56,7 +56,7 @@
 
       <h2>GopherCon US 2018</h2>
       <p>To qualify you must identify as a woman or non-binary. Applications are due by <strong>June 22nd</strong>
-        and we plan to notify recipients by July 2nd.</p>
+        and we plan to notify recipients by the week of July 2nd. We will let everyone know when the selection process is complete so that you can plan accordingly.</p>
 
       <p>Our goal is to send as many people as possible to GopherCon.
         Each scholarship is different, depending on what you need help with:
