Update twitter link for San Francisco
Add new Twitter link for San Francisco chapter

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -711,7 +711,7 @@
             </a>
           </p>
           <p class="col-xs-2 text-center link">
-            <a href="https://twitter.com/womenwhogo" target="_blank">
+            <a href="https://twitter.com/womenwhogo_sf" target="_blank">
               <img src="./assets/images/twitter.png">
             </a>
           </p>
