--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -90,7 +90,7 @@
     <hr>
     <div class="container chapters">
       <br>
-            <div class="row chapter-region">
+      <div class="row chapter-region">
         <div class="col-xs-12">
           <p class="lead text-muted text-capital">Brazil</p>
         </div>
@@ -199,8 +199,35 @@
         </div>
       </div>
 
+      <br/>
+      <div class="row chapter-region">
+        <div class="col-xs-12">
+          <p class="lead text-muted text-capital">Canada</p>
+        </div>
+      </div>
+
+      <div class="row chapter">
+        <div class="col-xs-5">
+          <p class="lead">Vancouver:</p>
+        </div>
+
+        <div class="col-xs-7">
+          <p class="col-xs-2 text-center link">
+            <a href="http://www.meetup.com/women-who-go-vancouver/" target="_blank">
+              <img src="./assets/images/meetup.png">
+            </a>
+          </p>
+
+          <p class="col-xs-2 text-center link">
+            <a href="mailto:yvr@womenwhogo.org" target="_top">
+              <img src="./assets/images/mail.png">
+            </a>
+          </p>
+        </div>
+      </div>
+
       <br>
-            <div class="row chapter-region">
+      <div class="row chapter-region">
         <div class="col-xs-12">
           <p class="lead text-muted text-capital">Germany</p>
         </div>
