Link prominently to t-shirt shop

--- a/womenwhogo.org/donations.html
+++ b/womenwhogo.org/donations.html
@@ -41,6 +41,7 @@
     <div class="container links">
       <h2>Direct Donations</h2>
       <p>Our <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=N25AMKB9QGZ6J">General Fund</a> is for diversity scholarships for the <a href="https://gophercon.com">GopherCon US</a> and <a href="https://gophercon.is">GopherCon EU</a> conferences, in addition to our other activities.</p>
+      <h2 id="store">Women Who Go Store</h2>
       <p>
         A more fun way to donate is to buy gopher swag and have the proceeds go to our general fund!
         <a href="https://twitter.com/ashleymcnamara">Ashley McNamara</a> has graciously allowed us to
