--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -28,7 +28,7 @@
 
   <body>
   <div class="alert alert-warning lead">
-  <a href="donations.html">Donate</a> to send our members to GopherCon!
+  <a href="donations.html">Donate</a> | <a href="donations.html#store">Shirts and More!</a>
   </div>
     <div class="container header">
       <div class="row"><p class="text-center col-xs-6 col-xs-offset-3"><img class="main-img" src="assets/images/wwglogo.png"></p></div>
