--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -794,7 +794,7 @@
         </div>
         <div class="col-xs-7">
           <p class="col-xs-2 text-center link">
-            <a href="https://www.meetup.com/es/Women-Who-Go-Utah" target="_blank">
+            <a href="https://www.meetup.com/Women-Who-Go-Utah" target="_blank">
               <img src="./assets/images/meetup.png">
             </a>
           </p>
