Add Atlanta meetup link

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -548,6 +548,11 @@
         </div>
         <div class="col-xs-7">
           <p class="col-xs-2 text-center link">
+            <a href="https://www.meetup.com/Women-Who-Go-Atlanta" target="_blank">
+              <img src="./assets/images/meetup.png">
+            </a>
+          </p>
+          <p class="col-xs-2 text-center link">
             <a href="https://twitter.com/WomenWhoGoAtl" target="_blank">
               <img src="./assets/images/twitter.png">
             </a>
