--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -278,6 +278,19 @@
           </p>
           </div>
         </div>
+        <div class="row chapter">
+          <div class="col-xs-5">
+            <p class="lead">Pune:</p>
+          </div>
+          <div class="col-xs-7">
+            <p class="col-xs-2 text-center link">
+              <a href="https://twitter.com/wwg_pune" target="_blank">
+                <img src="./assets/images/twitter.png">
+              </a>
+            </p>
+          </div>
+        </div>
+
         <br>
 
        <div class="row chapter-region">
