--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -96,6 +96,26 @@
         </div>
       </div>
 
+       <div class="row chapter">
+        <div class="col-xs-5">
+          <p class="lead">Curitiba:</p>
+        </div>
+        <div class="col-xs-7">
+          <p class="col-xs-2 text-center link">
+            <a href="https://www.meetup.com/Women-Who-Go-CWB/" target="_blank">
+              <img src="./assets/images/meetup.png">
+            </a>
+          </p>
+          <p class="col-xs-2 text-center link">
+            <a href="https://twitter.com/womenwhogocwb" target="_blank">
+              <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+        </div>
+      </div>
+      
+      <br>
+      
       <div class="row chapter">
         <div class="col-xs-5">
           <p class="lead">Porto Alegre:</p>
