added Sydney/Australia chapter

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -92,6 +92,29 @@
       <br>
       <div class="row chapter-region">
         <div class="col-xs-12">
+          <p class="lead text-muted text-capital">Australia</p>
+        </div>
+      </div>
+      <div class="row chapter">
+        <div class="col-xs-5">
+          <p class="lead">Sydney:</p>
+        </div>
+        <div class="col-xs-7">
+          <p class="col-xs-2 text-center link">
+            <a href="https://www.meetup.com/Women-Who-Go-Sydney/" target="_blank">
+              <img src="./assets/images/meetup.png">
+            </a>
+          </p>
+          <p class="col-xs-2 text-center link">
+            <a href="mailto:katie@gophercon.com.au" target="_top">
+              <img src="./assets/images/mail.png">
+            </a>
+          </p>
+        </div>
+      </div>
+
+      <div class="row chapter-region">
+        <div class="col-xs-12">
           <p class="lead text-muted text-capital">Brazil</p>
         </div>
       </div>
