Add WWG Chennai chapter

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -336,6 +336,27 @@
 
         <br>
 
+            <div class="row chapter">
+        <div class="col-xs-5">
+          <p class="lead">Chennai:</p>
+        </div>
+          <div class="col-xs-7">
+          <p class="col-xs-2 text-center link">
+             <a href="https://github.com/womenwhogochennai" target="_blank">
+               <img src="./assets/images/website.png">
+             </a>
+          </p>
+          <p class="col-xs-2 text-center link">
+            <a href="https://twitter.com/WWGo_Chennai" target="_blank">
+              <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+          
+          </div>
+        </div>
+        <br>
+
+      
        <div class="row chapter-region">
         <div class="col-xs-12">
           <p class="lead text-muted text-capital">Israel</p>
