Added Women Who Go Bangalore Chapter

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -355,7 +355,35 @@
           </div>
         </div>
         <br>
-
+        
+        <div class="row chapter">
+          <div class="col-xs-5">
+            <p class="lead">Bangalore:</p>
+          </div>
+            <div class="col-xs-7">
+            <p class="col-xs-2 text-center link">
+                <a href="https://www.meetup.com/WomenWhoGoBangalore/" target="_blank">
+                  <img src="./assets/images/meetup.png">
+                </a>
+              </p>
+            <p class="col-xs-2 text-center link">
+               <a href="https://github.com/golangindia/blrwwg" target="_blank">
+                 <img src="./assets/images/website.png">
+               </a>
+            </p>
+            <p class="col-xs-2 text-center link">
+              <a href="https://twitter.com/WomenWhoGo_BLR" target="_blank">
+                <img src="./assets/images/twitter.png">
+              </a>
+            </p>
+            <p class="col-xs-2 text-center link">
+              <a href="mailto:blr@womenwhogo.org" target="_top">
+                <img src="./assets/images/mail.png">
+              </a>
+            </p>
+            </div>
+          </div>
+          <br>
       
        <div class="row chapter-region">
         <div class="col-xs-12">
