Add LinkedIn and Email for Curitiba Chapter
now the WWG Curitiba Chapter has a page on LinkedIn :D we're adding it and the email address as well.

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -134,6 +134,16 @@
               <img src="./assets/images/twitter.png">
             </a>
           </p>
+          <p class="col-xs-2 text-center link">
+            <a href="https://www.linkedin.com/company/40847620/" target="_blank">
+              <img src="./assets/images/website.png">
+            </a>
+          </p>
+          <p class="col-xs-2 text-center link">
+            <a href="mailto:cwb@womenwhogo.org" target="_top">
+              <img src="./assets/images/mail.png">
+            </a>
+          </p>
         </div>
       </div>
       
