Add banner for goland fundraising campaign

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -30,6 +30,11 @@
   <div class="alert alert-warning lead">
   <a href="donations.html">Donate</a> | <a href="donations.html#store">Shirts and More!</a>
   </div>
+  <div style="margin-top:-20px">
+    <a href="https://www.jetbrains.com/lp/support-go/">
+    <img src="./assets/images/goland-banner.png" style="width: 100%;" />
+    </a>
+  </div>
     <div class="container header">
       <div class="row"><p class="text-center col-xs-6 col-xs-offset-3"><img class="main-img" src="assets/images/wwglogo.png"></p></div>
       <h1 class="text-center">Women Who Go</h1>
