--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -238,6 +238,36 @@
       </div>
 
       <br/>
+
+      <div class="row chapter">
+        <div class="col-xs-5">
+          <p class="lead">São Paulo:</p>
+        </div>
+        <div class="col-xs-7">
+          <p class="col-xs-2 text-center link">
+            <a href="https://www.meetup.com/Women-Who-Go-Sampa/" target="_blank">
+              <img src="./assets/images/meetup.png">
+            </a>
+          </p>
+          <p class="col-xs-2 text-center link">
+            <a href="https://twitter.com/wwgsampa" target="_blank">
+              <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+          <p class="col-xs-2 text-center link">
+             <a href="http://sampa.womenwhogo.org/" target="_blank">
+               <img src="./assets/images/website.png">
+             </a>
+           </p>
+           <p class="col-xs-2 text-center link">
+             <a href="mailto:sampa@womenwhogo.org" target="_top">
+               <img src="./assets/images/mail.png">
+             </a>
+           </p>
+        </div>
+      </div>
+
+      <br/>
       <div class="row chapter-region">
         <div class="col-xs-12">
           <p class="lead text-muted text-capital">Canada</p>
