--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -608,6 +608,24 @@
       <br>
       <div class="row chapter-region">
         <div class="col-xs-12">
+          <p class="lead text-muted text-capital">Spain</p>
+        </div>
+      </div> 
+      <div class="row chapter">
+        <div class="col-xs-5">
+          <p class="lead">Palma de Mallorca:</p>
+        </div>
+        <div class="col-xs-7">
+          <p class="col-xs-2 text-center link">
+            <a href="https://twitter.com/womenwhogoPALMA" target="_blank">
+              <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+        </div>
+      </div>
+      <br>
+      <div class="row chapter-region">
+        <div class="col-xs-12">
           <p class="lead text-muted text-capital">Switzerland</p>
         </div>
       </div>
