Added a section for Ireland

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -424,7 +424,25 @@
             </div>
           </div>
           <br>
-      
+          <div class="row chapter-region">
+            <div class="col-xs-12">
+              <p class="lead text-muted text-capital">Ireland</p>
+            </div>
+          </div>
+          <div class="row chapter">
+            <div class="col-xs-5">
+              <p class="lead">Athlone:</p>
+            </div>
+            <div class="col-xs-7">
+              <p class="col-xs-2 text-center link">
+                <a href="https://twitter.com/wwg_athlone" target="_blank">
+                  <img src="./assets/images/twitter.png">
+                </a>
+              </p>
+            </div>
+          </div>
+          <br>
+
        <div class="row chapter-region">
         <div class="col-xs-12">
           <p class="lead text-muted text-capital">Israel</p>
