rdu chapter first commit

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -842,6 +842,23 @@
           </p>
         </div>
       </div>
+      <div class="row chapter">
+        <div class="col-xs-5">
+          <p class="lead">Raleigh:</p>
+        </div>
+        <div class="col-xs-7">
+          <p class="col-xs-2 text-center link">
+            <a href="https://www.meetup.com/Women-Who-Go-Raleigh/" target="_blank">
+              <img src="./assets/images/meetup.png">
+            </a>
+          </p>
+          <p class="col-xs-2 text-center link">
+            <a href="https://twitter.com/womenwhogorale1" target="_blank">
+              <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+        </div>
+      </div>
             <div class="row chapter">
         <div class="col-xs-5">
           <p class="lead">Minneapolis:</p>
