Add Toronto chapter info

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -271,6 +271,29 @@
 
       <div class="row chapter">
         <div class="col-xs-5">
+          <p class="lead">Toronto:</p>
+        </div>
+        <div class="col-xs-7">
+          <p class="col-xs-2 text-center link">
+            <a href="http://www.meetup.com/women-who-go-toronto/" target="_blank">
+              <img src="./assets/images/meetup.png">
+            </a>
+          </p>
+          <p class="col-xs-2 text-center link">
+            <a href="https://twitter.com/WWGToronto" target="_blank">
+              <img src="./assets/images/twitter.png">
+            </a>
+          </p>
+          <p class="col-xs-2 text-center link">
+            <a href="mailto:toronto@womenwhogo.org" target="_top">
+              <img src="./assets/images/mail.png">
+            </a>
+          </p>
+        </div>
+      </div>
+
+      <div class="row chapter">
+        <div class="col-xs-5">
           <p class="lead">Vancouver:</p>
         </div>
 
