Update index.html with WWG Bangalore Twitter handler

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -435,7 +435,7 @@
                </a>
             </p>
             <p class="col-xs-2 text-center link">
-              <a href="https://twitter.com/WomenWhoGo_BLR" target="_blank">
+              <a href="https://twitter.com/wwg_blr" target="_blank">
                 <img src="./assets/images/twitter.png">
               </a>
             </p>
