Update index.html with WWG Dublin (previously Athlone) Twitter handle

--- a/womenwhogo.org/index.html
+++ b/womenwhogo.org/index.html
@@ -478,11 +478,11 @@
           </div>
           <div class="row chapter">
             <div class="col-xs-5">
-              <p class="lead">Athlone:</p>
+              <p class="lead">Dublin:</p>
             </div>
             <div class="col-xs-7">
               <p class="col-xs-2 text-center link">
-                <a href="https://twitter.com/wwg_athlone" target="_blank">
+                <a href="https://twitter.com/wwg_dublin" target="_blank">
                   <img src="./assets/images/twitter.png">
                 </a>
               </p>
